--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "express": "^4.18.2",
+    "font-awesome": "^4.7.0",
     "nodemon": "^2.0.20"
   }
 }
